tests/ui/return_borrowed_param.stderr
Error [E0120]: `name` is only borrowed here, so it can't be given back as-is
  --> tests/ui/return_borrowed_param.jet:2:12
    |
  2 |     return name;
    |            ^^^^
 Why: this function reads the value but doesn't own it
 Fix: return a copy: `return name.clone();` — or take ownership with `take name: String`
