tests/ui/return_borrowed_param.jet
fn pick(name: String) -> String {
    return name;
}

fn main() {
    print(pick("x"));
}
